--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -51,7 +51,7 @@
 \usetikzlibrary{shapes, shadows, arrows, arrows.meta}
 \usetikzlibrary{fit}
 \usetikzlibrary{external}
-\tikzexternalize[prefix=figures/] % activate!
+\tikzexternalize[prefix=figures/] % Generate all tikz figures in one folder
 
 % Plots
 \usepackage{pgfplots} % plots
